--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "start": "npx ts-node cmd/main.ts",
     "gen": "protoc --plugin=protoc-gen-ts_proto=.\\node_modules\\.bin\\protoc-gen-ts_proto.cmd --ts_proto_out=./src/port/gprc/gen ./protos/payment.proto --ts_proto_opt=outputServices=grpc-js,env=node,esModuleInterop=true",
     "proto:build": "cd proto; buf build; cd ..",
@@ -20,5 +21,10 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
+  }
 }
