--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
     "outDir": "dist", 
     "resolveJsonModule": true, 
    }, 
-  "lib": ["es2015"] 
+  "lib": ["es2015"],
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
