--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.0",
     "@types/pg": "^8.11.10",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "pg": "^8.13.0",
     "save-dev": "^0.0.1-security",
+    "ts-node": "^10.9.2",
     "ts-proto": "^2.2.2",
     "typescript": "^5.6.2"
   },
