--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - "50051:50051"
+    environment:
+      SERVER_CONFIG_HOST: localhost
+      SERVER_CONFIG_PORT: 50051
+      DATABASE_CONFIG_HOST: payment-db
+      DATABASE_CONFIG_PORT: 5432
+      DATABASE_CONFIG_USER: postgres
+      DATABASE_CONFIG_PASSWORD: guest
+      DATABASE_CONFIG_DATABASE: postgres
     networks:
       - backend
     depends_on:
